--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --timeout 20000 -R spec ./test/*.js",
+    "tests": "./node_modules/mocha/bin/mocha tests/**.js",
     "start": "node example/server.js",
     "coveralls": "./node_modules/mocha/bin/mocha --timeout 20000 --require blanket --reporter mocha-lcov-reporter ./test/*.js | ./node_modules/coveralls/bin/coveralls.js",
     "coverage": "./node_modules/mocha/bin/mocha --timeout 20000 --require blanket --reporter html-cov ./test/*.js > coverage.html",
