--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "async": "1.5.0",
     "co": "^4.6.0",
     "debug": "2.2.0",
+    "joi-to-json-schema": "^2.4.0",
     "lodash.omit": "3.1.0",
     "mongodb": "2.0.48",
     "mongodb-autoincrement": "^1.0.1",
